--- a/conda_env.yml
+++ b/conda_env.yml
@@ -1,7 +1,10 @@
 name: PICO-dev
 channels:
   - https://mirrors.tuna.tsinghua.edu.cn/anaconda/pkgs/free
+  - conda-forge
   - defaults
+  - https://repo.anaconda.com/pkgs/main
+  - https://repo.anaconda.com/pkgs/r
 dependencies:
   - _libgcc_mutex=0.1=main
   - _tflow_select=2.1.0=gpu
@@ -10,15 +13,24 @@ dependencies:
   - astor=0.8.1=py36_0
   - async_generator=1.10=py36h28b3542_0
   - attrs=20.3.0=pyhd3eb1b0_0
+  - binutils=2.33.1=h53a641e_8
+  - binutils_impl_linux-64=2.33.1=he1b5a44_7
+  - binutils_linux-64=2.33.1=h9595d00_17
   - blas=1.0=mkl
   - bleach=3.3.0=pyhd3eb1b0_0
+  - boost=1.73.0=py36h6957fcd_1
+  - boost-cpp=1.73.0=h27cfd23_11
+  - bzip2=1.0.8=h7b6447c_0
   - c-ares=1.17.1=h27cfd23_0
-  - ca-certificates=2021.7.5=h06a4308_1
+  - c-compiler=1.1.1=h516909a_0
+  - ca-certificates=2025.4.26=hbd8a1cb_0
   - certifi=2021.5.30=py36h06a4308_0
   - cffi=1.14.5=py36h261ae71_0
+  - compilers=1.1.1=0
   - cudatoolkit=10.0.130=0
   - cudnn=7.6.5=cuda10.0_0
   - cupti=10.0.130=0
+  - cxx-compiler=1.1.1=hc9558a2_0
   - cycler=0.10.0=py36_0
   - cython=0.29.21=py36h2531618_0
   - dbus=1.13.18=hb2f20db_0
@@ -26,12 +38,20 @@ dependencies:
   - entrypoints=0.3=py36_0
   - expat=2.2.10=he6710b0_2
   - fontconfig=2.13.0=h9420a91_0
+  - fortran-compiler=1.1.1=he991be0_0
   - freetype=2.10.4=h5ab3b9f_0
+  - gast=0.5.3=pyhd3eb1b0_0
+  - gcc_impl_linux-64=7.3.0=habb00fd_1
+  - gcc_linux-64=7.3.0=h553295d_17
+  - gfortran_impl_linux-64=7.3.0=hdf63c60_5
+  - gfortran_linux-64=7.3.0=h553295d_17
   - glib=2.66.1=h92f7085_0
   - google-pasta=0.2.0=py_0
   - grpcio=1.31.0=py36hf8bcb03_0
   - gst-plugins-base=1.14.0=h8213a91_2
   - gstreamer=1.14.0=h28cd5cc_2
+  - gxx_impl_linux-64=7.3.0=hdf63c60_1
+  - gxx_linux-64=7.3.0=h553295d_17
   - h5py=2.10.0=py36hd6299e0_1
   - hdf5=1.10.6=hb1b8bf9_0
   - icu=58.2=he6710b0_3
@@ -39,6 +59,7 @@ dependencies:
   - importlib-metadata=2.0.0=py_1
   - intel-openmp=2020.2=254
   - ipykernel=5.3.4=py36h5ca1d4c_0
+  - ipython=6.1.0=py36_0
   - ipython_genutils=0.2.0=pyhd3eb1b0_1
   - ipywidgets=7.6.3=pyhd3eb1b0_1
   - jedi=0.18.0=py36h06a4308_1
@@ -59,6 +80,7 @@ dependencies:
   - kiwisolver=1.3.0=py36h2531618_0
   - lcms2=2.11=h396b838_0
   - ld_impl_linux-64=2.33.1=h53a641e_7
+  - libboost=1.73.0=h3ff78a5_11
   - libedit=3.1.20191231=h14c3975_1
   - libffi=3.3=he6710b0_2
   - libgcc-ng=9.1.0=hdf63c60_0
@@ -90,7 +112,7 @@ dependencies:
   - numpy=1.19.2=py36h54aff64_0
   - numpy-base=1.19.2=py36hfa32c7d_0
   - olefile=0.46=py36_0
-  - openssl=1.1.1k=h27cfd23_0
+  - openssl=1.1.1w=h7f8727e_0
   - packaging=20.9=pyhd3eb1b0_0
   - pandas=1.1.5=py36ha9443f7_0
   - pandoc=2.12=h06a4308_0
@@ -101,7 +123,6 @@ dependencies:
   - pickleshare=0.7.5=pyhd3eb1b0_1003
   - pip=20.3.3=py36h06a4308_0
   - prometheus_client=0.10.1=pyhd3eb1b0_0
-  - prompt_toolkit=1.0.15=py36_0
   - protobuf=3.13.0.1=py36he6710b0_1
   - ptyprocess=0.7.0=pyhd3eb1b0_2
   - pycparser=2.20=py_2
@@ -111,6 +132,7 @@ dependencies:
   - pyrsistent=0.17.3=py36h7b6447c_0
   - python=3.6.12=hcff3b4d_2
   - python-dateutil=2.8.1=py_0
+  - python_abi=3.6=2_cp36m
   - pytz=2021.1=pyhd3eb1b0_0
   - pyyaml=5.4.1=py36h27cfd23_1
   - pyzmq=20.0.0=py36h2531618_1
@@ -151,22 +173,12 @@ dependencies:
   - zlib=1.2.11=h7b6447c_3
   - zstd=1.4.5=h9ceee32_0
   - pip:
-    - backcall==0.2.0
-    - cloudpickle==1.6.0
-    - decorator==4.4.2
-    - dm-sonnet==1.23
-    - dm-tree==0.1.6
-    - future==0.18.2
-    - gast==0.2.2
-    - graph-nets==1.0.4
-    - gym==0.18.0
-    - ipdb==0.13.7
-    - ipython==7.16.1
-    - magent==0.1.14
-    - networkx==2.5.1
-    - pillow==7.2.0
-    - prompt-toolkit==3.0.18
-    - pygame==2.1.0
-    - pyglet==1.5.0
-    - tensorflow-determinism==0.3.0
-    - toml==0.10.2
+      - backcall==0.2.0
+      - decorator==4.4.2
+      - future==0.18.2
+      - networkx==2.5.1
+      - pillow==7.2.0
+      - prompt-toolkit==3.0.18
+      - pygame==2.1.0
+      - pyglet==1.5.0
+      - toml==0.10.2
